[package]
name = "cpnsim"
version = "0.2.1"
authors = ["István Koren"]
edition = "2024"
license = "MIT"
description = "CPNsim is a Rust library  and command-line tool with WebAssembly target for simulating Colored Petri Nets (CPNs)"
repository = "https://github.com/rwth-pads/cpnsim"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = [
    "wasm-bindgen",
    "js-sys",
    "serde-wasm-bindgen",
    "getrandom/wasm_js",
    "rhai/wasm-bindgen",
    "web-sys",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cfg-if = "1.0"
rand = "0.9.1"
rand_distr = "0.5"
rhai = { version = "1.21.0", features = ["sync", "decimal", "serde"] }
anyhow = "1.0"
itertools = "0.14.0"
chrono = { version = "0.4", features = ["serde"] }

# Conditional dependencies for wasm builds
wasm-bindgen = { version = "0.2.100", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
# Optimize for small Wasm binary size
opt-level = "s"
